style.css
body{background-color: #1F2D54;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100vh;
        margin-top: 60px;
        font-family:"Poppins", serif;;
}

.top{
    font-weight:bold;
    text-align: center;
    font-size: 20px;
    margin:20px 0px;
}

.top p{
    margin: 0;
    color:#262863;
}

.top p.orange-text{
    color: #ed4c40;
}

.container{
    background-color: white;
    width: 1200px;
    height: 750px;
    padding: 20px;
    padding-top: 10px;
    border-radius: 40px;
    margin:0 auto;

}
.plans{
    display: flex;
    height:600px;
    text-align: center;
}
.popular{
    font-weight: bold;
    text-align: center;
    font-size: 20px;
    background-color: #ed4c40;
    margin: 0 auto;
    width:100px;
    height: auto;
    ;
}
.plans-header{
    background-color: #262863;
    color: #fff;
    text-align: center;
    height: 150px;
    margin: 0px;
    border-bottom: 20px solid #ed4c40;
}



.plans-header h1{
    margin-top: 15px;
    margin-bottom: 0;
    font-weight: 500;
    font-size: 33px;}
.plans-header p{
    margin-top: 0;
    font-size: 14px;
}
.plans > div{
    display: flex;
    flex-direction: column;
    flex: 1;
    position: relative;
    background-color:#efefef;
    display:flex;
    color:#262863;
}
.monthly .plans-header{
    border-top-left-radius: 20px;
}

.monthly .plans-content{
    border-bottom-left-radius: 20px;
}

.annual .plans-header{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    margin-top: -20px;
    height: 170px;
}
.concierge .plans-header{
    border-top-right-radius: 20px;
}

.plans-content{
    padding: 10px 20px;
}


.plans-content .second-advantage{
    margin-top: 25px;
}


.plans-content ul{
    padding: 0 0 0 70px;
    font-size: 19px;
    text-align: left;
}

.concierge .plans-content ul{
    padding: 0 0 0 32px;
}

.plans-content h1{
    font-size: 35px;
    font-weight: bolder;
    text-align: center;
    margin: 25px;  
}

.plans-content a{
    width: 200px;
    height: 50px;
    display: inline-block;
    margin: 0 auto;
    text-align: center;
    align-items:center;
    font-weight: bold;
    border-radius:13px;
    font-size: 19px;
    color: #1F2D54;
    border:solid#1F2D54;  
    border-width: 2px; 
}

.plans-content a:hover{
    background-color: #1F2D54;
    color: #efefef;
    transition: background-color 0.5s;
}

.plans-content a.annual-button{
    background-color: #1F2D54;
    color: #efefef;
}

.plans-content a.annual-button:hover{
    background-color: #efefef;
    color: #1F2D54;
}

.concierge .plans-content .second-advantage{
    margin-top: 15px;
}

.concierge .plans-content h1{
    font-size: 30px;
    margin-bottom: 10px;
    line-height: 1.3;
}

.annual{
    border-radius: 20px;
    box-shadow: 10px 15px 15px 15px rgba(0,0,0,0.1); 
    height: 620px;
    z-index: 1;
}

